--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
                     <div class="info-humidity">
                         <span>0%</span>
                     </div>
-                    <p>Humidity</p>
+                    <p>Umiditate</p>
                 </div>
             </div>
             <div class="wind">
@@ -47,7 +47,7 @@
                     <div class="info-wind">
                         <span>0Km/h</span>
                     </div>
-                    <p>Wind Speed</p>
+                    <p>Viteza Vantului</p>
                 </div>
             </div>
          </div>
